[package]
name = "first-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
rand = "0.9.2"
# Adicione a linha abaixo
socketioxide = "0.17.2"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.6.6", features = ["cors"] }